
2018-08-12  Greg Noe <gnoe@symas.com>

	* fileio.c [WITH_LMDB]: finished first working snapshot of LMDB
	  integration.
	  Note: Some NIST tests still fail, locking is not implemented yet.
	* Makefile.am: moved include of top_srcdir to AM_CPPFLAGS to prevent
	  user-specified CPPFLAGS to override own includes, see bug #452

2018-05-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c [_WIN32]: only define __GMP_LIBGMP_DLL if it is not
	  defined already, allowing to use a static version by defining
	  __GMP_LIBGMP_DLL to 0

2017-12-18  Greg Noe <gnoe@symas.com>

	* fileio.c, common.c, coblocal.h: replaced prefix "bdb_" with "db_"

2017-10-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am (install-data-hook): added missing $(DESTDIR), as
	  reported by Eric Gallager in bug #73

2017-09-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_screen_get_all, field_accept): beep instead of
	  wrong-casting characters we currently can't store
	* screenio.c (field_accept): beep on insert if field is already full
	* screenio.c (cob_screen_init): set cursor depending on insert mode
	  to vertical bar cursor (on) or square cursor (off)
	* screenio.c (cob_screen_get_all): fix for handling BACKSPACE,
	  added handling for DELETE and INSERT keys and COB_INSERT_MODE

2017-08-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_init)[_WIN32]: only use GetUsername if HAVE_GETUSERNAME
	  is defined (for example in config.h)

2017-08-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: moved code to cleanup modules to cob_exit_common_modules
	  and do this only once (after exit handler calls, before call cleanup)

2017-08-26  Ron Norman <rjn@inglenet.com>

	* common.c: Free the structs used to track modules on STOP RUN

2017-08-18  Ron Norman <rjn@inglenet.com>

	* common.c: Keep list of all active modules for later free of