@@ -1,4 +1,9 @@
 
+2018-08-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* fileio.c [_WIN32]: fix compilation
+	* fileio.c (indexed_open) [WITH_LMDB]: fixed missing status 37
+
 2018-08-12  Greg Noe <gnoe@symas.com>
 
 	* fileio.c [WITH_LMDB]: finished first working snapshot of LMDB
